# GSP_API

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  LEGACY_MAP.md  Makefile  README.md  README_TEXT_ALIGN.md  RELEASE_NOTES.md  SPEC_INDEX.md  STATUS.md  TEXT_ALIGN_MIGRATION.md  TEXT_ALIGN_SUMMARY.md  TODO.md  claude.md  gsp_required_updates_for_mpl_gsp.md  index.html  mkdocs.yml  mpl_gsp_backend_implementation.md  objects.inv  pyproject.toml  pyrightconfig.json
.agent/: DATOVIZ_PANEL_FRAME_ARCHITECTURE.md  DATOVIZ_VIEW2D_AXIS_REWORK_HANDOFF.md  P037_REVIEW.md  README.md  S023_HANDOFF.md  S029_CLOSEOUT.md  S029_CONTINUATION_HANDOFF.md  S029_DATOVIZ_COLORBAR_HANDOFF.md  S029_DATOVIZ_COLOR_COLORBAR_AUDIT.md  S029_DATOVIZ_GUIDE_VIEW2D_AUDIT.md  S029_DATOVIZ_GUIDE_VIEW2D_HANDOFF.md  S029_DATOVIZ_MESH_AUDIT.md  S029_DATOVIZ_RENDERED_FAMILY_AUDIT.md  S029_DATOVIZ_TEXT_AUDIT.md  S029_DATOVIZ_TRANSFORM_AUDIT.md  S030_CLOSEOUT.md  S030_CONTINUATION_HANDOFF.md  S030_DATOVIZ_GUIDE_AXIS_PROOF.md  S031_CLOSEOUT.md  S032_CLOSEOUT.md  S033_RELEASE_AUDIT.md  S033_SCOPING.md  S034_NEXT_STEPS.md  S034_SCOPING.md  S035_CLOSEOUT.md  S035_PHYSICAL_CANVAS_SIZING_PLAN.md  S036_CLOSEOUT.md  S036_SCOPING.md  S037_CLOSEOUT.md  S037_DATOVIZ_VIEW3D_EVIDENCE.md  S037_LEGACY_3D_AUDIT.md  S037_SCOPING.md  S038_CLOSEOUT.md  S039_CLOSEOUT.md  S039_SCOPING.md  S040_CLOSEOUT.md  S040_SCOPING.md  S041_CLOSEOUT.md  S041_SCOPING.md  S042_CLOSEOUT.md  (+91 more)
.claude/: ANCHOR_MAPPING_BUGS.md  DESIGN_IMSHOW.md  SCATTER_ANALYSIS.md  SCATTER_EXAMPLE_ANALYSIS.md  SCATTER_IMPROVEMENTS.md  TEXT_ALIGN_QUICK_REFERENCE.md  TEXT_ALIGN_USAGE.md  TEXT_ALIGN_VISUAL.txt  TEXT_RENDERING_REVIEW.md
TASKS/: NEXT_MISSIONS_IMPORT_NOTE.md  _template.md
about/: index.html
adr/: ADR-0003-gsp-v0.1-vertical-slice.md  ADR-0022-view2d-navigation-actions.md  ADR-0025-meshvisual-unlit-rgba-material-boundary.md  ADR-0026-minimal-flat-lambert-mesh-shading.md  ADR-0035-gsp-vispy2-repository-separation.md
api_pyi/: api.pyi
conformance/: index.html
doc/: FIX_FOR_GROUPS.MD
docs/: datoviz_v04_binding_evidence.md  datoviz_v04_gap_analysis.md  mypy_strict_debt_inventory.md  mypy_type_surface_plan.md  packaging_import_surface_audit.md  packaging_import_surface_policy.md  physical_canvas_sizing.md  release_checklist.md  screenshot_provenance.md
examples/: README.md  _animator_datoviz_debug.py  _animator_example copy.py  _animator_example.py  _animator_network_example.py  _axes_display.py  _axes_display_00.py  _axes_display_01.py  _axes_display_02.py  _axes_display_03.py  _axes_image_pyramid_00.py  _axes_image_pyramid_01.py  _axes_image_pyramid_02.py  _axes_image_pyramid_03.py  _axes_image_pyramid_04.py  _axes_image_pyramid_05.py  _axes_image_pyramid_06.py  _axes_image_pyramid_07.py  _axes_image_pyramid_08.py  _big_tester.py  _big_tester_cmdline.py  _big_tester_example.py  _camera_control_datoviz.py  _camera_control_example.py  _camera_control_matplotlib.py  _camera_control_network.py  _image_example.py  _matplotlib_animator_example.py  _mesh_dvz_manual copy.py  _mesh_dvz_manual.py  _mesh_dvz_manual_working.py  _mesh_example.py  _object3d_example.py  _testbed.py  _testbed_object3d.py  _texts_example.py  _verify_mesh_ndc.py  _viewport_events_example.py  _viewport_multi_example.py  _viewport_ndc_metric.py  (+98 more)
examples_nico/: pixels_nico_datoviz_example.py  pixels_nico_matplotlib_example.py
examples_tmp/: groups_datoviz_example.py  groups_matplotlib_example.py  pixels_datoviz_example.py  pixels_matplotlib_example.py
fixtures/: __init__.py
gallery/: index.html
mkdocs_source/: about.md  conformance.md  contributing.md  gallery.md  index.md  protocol.md  review-examples.md  s023_visual_qa.md  status.md
philosophy/: index.html
profiles/: datoviz-v0.4-0.2.json  gsp-vispy2-0.2.json  matplotlib-0.2.json  schema.json
protocol/: index.html
review-examples/: index.html
s023_visual_qa/: index.html
search/: search_index.json
spec/: backend_capabilities_visuals.md  canvas_size.md  capabilities.md  color_mapping.md  conformance-fixtures.md  data_sources.md  datoviz_v04_api_boundary.md  extensions.md  layout.md  navigation.md  protocol.md  query.md  resources.md  transforms.md  transports.md  view3d.md  view3d_mesh_triangle_pick_geometry.md  view3d_mesh_triangle_picking.md  view3d_navigation.md  vispy2_visual_api.md  visual_cross_cutting_rules.md  visual_families_v1.md  visual_qa_harness.md
status/: index.html
stylesheets/: gallery.css
tests/: test_axis_provider_capabilities.py  test_buffer.py  test_color_mapping_protocol.py  test_conformance_array_chunks.py  test_conformance_baseline.py  test_conformance_debug_report.py  test_conformance_json_fixture.py  test_conformance_matrix.py  test_conformance_replay.py  test_datoviz_v04_probe.py  (+31 more)
(+1985 files in other folders)
