[project]
name = "gsp"
version = "0.1.0"
description = "Backend-agnostic scene and protocol tools for scientific visualization."
authors = [
    {name = "Jerome Etienne",email = "jerome.etienne@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "imageio (>=2.37.2,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "http-constants (>=0.5.0,<0.6.0)",
    "flask (>=3.1.2,<4.0.0)",
    "requests-file (>=3.0.1,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[project.optional-dependencies]
# Legacy Datoviz wrapper support is optional. Datoviz v0.4-dev is validated by
# local smoke tests and is not declared here until a compatible wheel exists.
datoviz-legacy = [
    "datoviz (>=0.3.2,<0.4.0)",
]

[tool.poetry]
packages = [
    {include = "gsp", from = "src"},
    {include = "gsp_datoviz", from = "src"},
    {include = "gsp_extra", from = "src"},
    {include = "gsp_matplotlib", from = "src"},
    {include = "gsp_network", from = "src"},
    {include = "gsp_pydantic", from = "src"},
    {include = "vispy2", from = "src"},
    {include = "fixtures"},
]
include = [
    {path = "fixtures/conformance/minimal_v0_1.json", format = ["sdist", "wheel"]},
    {path = "fixtures/conformance/s020_security_negative.json", format = ["sdist", "wheel"]},
    {path = "fixtures/conformance/s021_preconfigured_source.json", format = ["sdist", "wheel"]},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "pyright (>=1.1.407,<2.0.0)",
    "types-colorama (>=0.4.15,<0.5.0)",
    "types-requests (>=2.32.4,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocstrings (>=1.0.0,<2.0.0)",
    "mkdocstrings-python (>=2.0.1,<3.0.0)",
    "pydoclint (>=0.8.3,<0.9.0)",
]

# Configuration for the Black code formatter 
[tool.black]
line-length = 160   # to match the 79 character limit of PEP 8, but allow some extra space for longer lines

# # Configuration for Pydoclint - https://jsh9.github.io/pydoclint/
# [tool.pydoclint]
# style = 'numpy'
# check-style-mismatch = true
# allow-init-docstring = true

[tool.ruff]
lint.select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
exclude = [
    "src/gsp/utils/math_utils copy.*\\.py$",
    "src/gsp/utils/math_utils_(new|original)\\.py$",
]

[[tool.mypy.overrides]]
module = ["datoviz", "datoviz.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["http_constants", "http_constants.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["meshio", "meshio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gsp_extra.mpl3d.*"]
ignore_errors = true
